<resources>
    <string name="app_name">cookit-app</string>
    <string name="for_example">for example</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="submit">submit</string>
    <string name="explore">Explore</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="saved">saved</string>
    <string name="my_recipes">my recipes</string>
    <string name="recent">recent</string>
    <string name="trending">trending</string>
    <string name="recipe_name">recipe name</string>
    <string name="preparation_time">preparation time</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="component">component</string>
    <string name="amount">amount</string>
    <string name="recipe_details">recipe details</string>
    <string name="recipe_components">recipe components</string>
    <string name="the_recipe">Quae tibi placent quicunq prosunt aut diligebat multum, quod memor sis ad communia sunt ab initio minima. Quod si, exempli gratia, cupidum rerum in propria sunt ceramic calicem, admonere te solum Ceramic, quod sit generalis poculis, in cuius es tu cupidum. Deinde, si erumpit, non turbarentur. Si osculantur puer tuus aut uxorem tuam, osculum, non dico quod omnia quae sunt hominis, et sic non tangetur, si aut ex eis moriatur. Quae tibi placent quicunq prosunt aut diligebat multum, quod memor sis ad communia sunt ab initio minima. Quod si, exempli gratia, cupidum rerum in propria sunt ceramic calicem, admonere te solum Ceramic, quod sit generalis poculis, in cuius es tu cupidum. Deinde, si erumpit, non turbarentur. Si osculantur puer tuus aut uxorem tuam, osculum, non dico quod omnia quae sunt hominis, et sic non tangetur, si aut ex eis moriatur. Quae tibi placent quicunq prosunt aut diligebat multum, quod memor sis ad communia sunt ab initio minima. Quod si, exempli gratia, cupidum rerum in propria sunt ceramic calicem, admonere te solum Ceramic, quod sit generalis poculis, in cuius es tu cupidum. Deinde, si erumpit, non turbarentur. Si osculantur puer tuus aut uxorem tuam, osculum, non dico quod omnia quae sunt hominis, et sic non tangetur, si aut ex eis moriatur.</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
</resources>