<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_marginTop="50dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:hint="@string/name"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/username"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <include
        android:id="@+id/include"
        layout="@layout/include_progressbar"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <Button
        android:id="@+id/submit_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="you have account? go to login"
        android:textColor="#000000"
        android:textSize="10dp"
        app:backgroundTint="#ffffff"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/log_out"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:gravity="center"-->
<!--        android:text="you have account? go to login"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="10dp"-->
<!--        app:backgroundTint="#ffffff"-->
<!--        app:iconGravity="textStart"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/submit_signup"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="10dp" />-->

<!--    <include-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        layout="@layout/include_progressbar"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>