<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Orientation">

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/recipe_image_border"
                android:src="@drawable/default_image"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/recipe_image"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/recipe_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/et_style"
                    android:hint="@string/recipe_name" />

                <EditText
                    android:id="@+id/preparation_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/et_style"
                    android:hint="@string/preparation_time" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/text"
                tools:ignore="MissingConstraints">

                <Spinner
                    android:id="@+id/tags"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tooltipText="tags"
                    android:layout_marginTop="8dp"
                    android:textSize="30sp" />

                <Spinner
                    android:id="@+id/meal_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/RecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearSpinner"
                tools:ignore="MissingConstraints">

            </LinearLayout>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/RecipeIngredients"
                tools:ignore="MissingConstraints">

            </EditText>

            <Button
                android:id="@+id/startGame"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/upload_recipe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>